vlib/v/checker/tests/alias_type_unkown.out
vlib/v/checker/tests/alias_type_unkown.vv:1:15: error: unknown type `Bird`
    1 | type Pigeon = Bird
      |               ~~~~
